Draft `Disease`, `MendelianDisease`, and `DiseaseFeature`. Draft HPOA parser for `MendelianDisease`.